Review all golf rounds, compute from oldest to newest, some recent golf rounds